         #3258533) (Sergio Baldovi).
20110403 peripherals/disk/upd_fdc.c: fix compilation warnings (patch #3259355)
         (Sergio Baldovi and Gergely Szasz).
20110403 ui/gtk/{gtkdisplay.c,gtkinternals.h,statusbar.c}: add current machine
         name to GTK+ statusbar (patch #3208815) (Sergio Baldovi).
20110404 ui/win32/about.rc: fix spelling (Stuart).
20110404 bitmap.h,peripherals/{disk/{beta.c,opus.[ch],plusd.[ch],upd_fdc.h,
         wd_fdc.[ch]},fuller.h}: update my email address (Stuart).
20110404 sound.[ch]: make certain variables be private to sound.h and remove
         unused variables (Stuart).
20110404 sound.c: add missing 'static' to function definition (Stuart).
20110405 sound.c: set treble on 'right' buffer for AY channel C when stereo
         output is enabled (Stuart).
20110405 sound.c: avoid calling option_enumerate_sound_speaker_type()
         repeatedly (Stuart).
20110405 settings.dat,sound.c,ui/options.dat: add support for ABC AY stereo
         (Stuart).
20110406 machines/specplus3.[ch],menu.[ch],menu_data.dat,
         peripherals/{disk/{beta,opus,plusd},if1}.[ch]: split saving out of
         menu_media_eject() and the device-specific eject functions (Stuart).
20110406 peripherals/disk/beta.c: enable Beta 128 interface for
         PERIPH_TYPE_BETA128_PENTAGON and PERIPH_TYPE_BETA128_PENTAGON_LATE too
         (ketmar).
20110407 peripherals/disk/beta.c,settings.dat,ui/options.dat: support the Beta
         interface setting to not auto-boot the interface on 48K machines 
         (ketmar).
20110407 peripherals/disk/beta.c: store Beta 128 autoboot setting in snapshots
         (Fred).
20110408 settings.dat: fix name of separation option in config file (Stuart).
20110412 configure.in,screenshot.c: libpng 1.5.X no longer internally includes
         the zlib.h header file, so applications that refer to Z_ constants need
         to include it explicitly (patch #3283820) (Sergio Baldovi).