@@ -3600,3 +3600,5 @@
 20110412 configure.in,screenshot.c: libpng 1.5.X no longer internally includes
          the zlib.h header file, so applications that refer to Z_ constants need
          to include it explicitly (patch #3283820) (Sergio Baldovi).
+20110412 ui/win32/win32ui.c: improve Win32 UI behaviour when cancelling
+         selection dialogs (patch #3283822) (Sergio Baldovi).
